moved 3v3 control to pwr and ensured gpio release

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ SRCS_SYMLINKS += $(wildcard *.h)
 SRCS_SYMLINKS += Makefile
 # #obj-m := $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(basename $(SRCS))))
 obj-m += opiz13.o
-opiz13-y := opiz13_main.o gpio.o
+opiz13-y := opiz13_main.o gpio.o pwr.o
 
 default: module
 
